mbofui/app/css/custom.css
body,
html {
    height: 100%;
    width: 100%;
}

body {
}
html,
body,
.angular-leaflet-map {
  height: 100%;
}
body {
  padding: 0;
  margin: 0;
  padding-top:50px
}

.status {
    display: none;
    position: absolute;
    top: 60px;
    z-index: 1;
    left: 20%;
    right: 20%;
}
.has-error span.req-text, .has-error label {
  color:#c00;
}

.alert-inline {
  color:#a94442;
  display: inline-block;
}
.popupRule{
  margin:8px 0
}
.popupMessage{
   margin:10px 0
}
.popupMessageToggle{
  margin-top:15px
}

 .ws-picker-header button[data-action="setMonthList"], .ws-picker-header button[data-action="setYearList"],.ws-picker-header button[data-action="setDayList"] {
   color:#05c  !important;
   text-decoration: underline !important
 }

.ws-po-box button[aria-label="Now"] {
  display: none !important;
}
.leaflet-popup-content {max-width:100%;width:400px}

.alertPanel {
  position:absolute;
  top:80px;
  left:20%;
  right:20%;
  z-index: 1
}


@media (max-width: 480px) {
  .leaflet-popup-content {width:auto}
}

